--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*General Stylings*/
 body {
     background-color: white;
 }
@@ -26,13 +27,6 @@ h2 {
     text-align: center;
 }
 
-.header {
-    padding: 20px;
-    background-color: black;
-    font-family: 'Poppins', sans-serif;
-    color: white;    
-}
-
 a {
     color: white;
     text-decoration: none;
@@ -42,6 +36,14 @@ a {
 
 a:hover {
     color: rgb(115, 161, 7);
+}
+
+/*Class Stylings*/
+
+.header {
+    background-color: black;
+    font-family: 'Poppins', sans-serif;
+    color: white;    
 }
 
 .header nav ul {
@@ -58,17 +60,3 @@ a:hover {
     margin: 0 auto;
 }
 
-.results-box {
-    border: 2px solid;
-    padding: 10px;
-}
-
-/* aside */
-/* #search-aside {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 40%;
-    height: 100%;
-} */
