--- a/styles.css
+++ b/styles.css
@@ -42,16 +42,20 @@ ul {
     list-style-type: none;
     margin-bottom: 0px;
 }
+
 form {
     margin-bottom:0px;
 }
+
 input {
+
     margin-bottom:0px;
     width: 100%;
+    
 }
+
 button {
     margin-bottom:0px;
-    width: 100%;
 }
 
 a:hover {
@@ -78,7 +82,6 @@ button:focus {
 
  .header nav ul li {
     display: inline-block;
-    margin-left: 20px;
     margin-top: 10px;
     
 }
@@ -86,6 +89,12 @@ button:focus {
 .cover {
     width:100px;
     height: 150px;
+}
+
+.button-primary {
+
+    margin-bottom: 5px;
+
 }
 
 /*Id stylings*/
@@ -97,3 +106,25 @@ button:focus {
     margin-left: auto;
     
 }
+
+#results {
+
+    background-color: rgb(115, 161, 7);
+    border: white 1px solid;
+    width: 100%;
+
+}
+
+#results:hover {
+
+    background-color: white;
+    border:  rgb(115, 161, 7) 1px solid;
+    color: rgb(115, 161, 7);
+
+}
+
+#search-input {
+
+    margin-bottom: 5px;
+}
+
