--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,21 @@ button:focus {
     margin-bottom: 5px;
 
 }
+.results {
+
+    background-color: rgb(115, 161, 7);
+    border: white 1px solid;
+    width: 100%;
+
+}
+
+.results:hover {
+
+    background-color: white;
+    border:  rgb(115, 161, 7) 1px solid;
+    color: rgb(115, 161, 7);
+
+}
 
 /*Id stylings*/
 #about {
@@ -106,23 +121,6 @@ button:focus {
     margin-left: auto;
     
 }
-
-#results {
-
-    background-color: rgb(115, 161, 7);
-    border: white 1px solid;
-    width: 100%;
-
-}
-
-#results:hover {
-
-    background-color: white;
-    border:  rgb(115, 161, 7) 1px solid;
-    color: rgb(115, 161, 7);
-
-}
-
 #search-input {
 
     margin-bottom: 5px;
