--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ button:focus {
 }
 
 .results {
+    color: white;
     margin-bottom: 5px;
     background-color: rgb(115, 161, 7);
     border: white 1px solid;
